fix scrolling on ios

--- a/client/assets/css/global.styl
+++ b/client/assets/css/global.styl
@@ -4,12 +4,22 @@ meyer-reset()
 box-sizing-reset()
 normalize()
 
-html, body, #root
+html, body
   background: #ffffff
   font-size: 16px
   height: 100%
+
+body
   overflow-x: hidden
+  overflow-y: auto
   position: relative
+  -webkit-overflow-scrolling: touch
+
+
+#root
+  min-height: 100%
+  display: flex
+  flex-direction: column
 
 *
   -webkit-tap-highlight-color: rgba(0,0,0,0)
